# pq-sys

./: .gitmodules  .travis.yml  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  README.md  appveyor.yml  build.rs  generate_bindings.sh
.github/workflows/: ci.yml
pq-src/: Cargo.toml  build.rs
pq-src/additional_include/: pg_config.h
pq-src/src/: lib.rs
src/: bindings.rs  bindings_linux.rs  bindings_linux_32.rs  bindings_windows.rs  bindings_windows_32.rs  lib.rs  make_bindings.rs  windows_bindings.rs
tests/: smoke.rs
