[package]
name = "pq-src"
version = "0.2.0"
edition = "2021"
include = [
        "src/*",
        "build.rs",
        "additional_include/pg_config.h",
        "additional_include/pg_config_paths.h",
        "additional_include/pg_config_ext.h",

        "source/src/include/*",
        "source/src/port/*",
        "source/src/common/*",
        "source/src/interfaces/libpq/*",
]
description = "Bundled version of libpq"
license = "PostgreSQL"
repository = "https://github.com/sgrif/pq-sys"
links = "pq_sys_src"
keywords = ["bindings", "libpq", "pq-sys", "bundled"]
categories = ["database", "external-ffi-bindings"]
readme = "README.md"

[target.'cfg(not(target_os = "windows"))'.dependencies]
openssl-sys = "0.9.93"

[build-dependencies]
cc = "1.0.83"

[features]
default = []
with-asan = []
