[package]
name = "pq-src"
version = "0.3.4"
edition = "2021"
include = [
        "src/**/*.rs",
        "build.rs",
        "additional_include/pg_config.h",
        "additional_include/pg_config_paths.h",
        "additional_include/pg_config_ext.h",

        "source/src/include/postgres_ext.h",
        "source/src/include/port/linux.h",
        "source/src/include/port/darwin.h",
        "source/src/include/port/win32.h",
        "source/src/include/port/win32_port.h",
        "source/src/include/port/pg_crc32c.h",
        "source/src/include/port/pg_bswap.h",
        "source/src/include/port/pg_bitutils.h",
        "source/src/include/port/pg_lfind.h",
        "source/src/include/port/simd.h",
        "source/src/include/port/win32ntdll.h",
        "source/src/include/port/win32/sys/resource.h",
        "source/src/include/port/win32/sys/select.h",
        "source/src/include/port/win32/sys/socket.h",
        "source/src/include/port/win32/sys/un.h",
        "source/src/include/port/win32/sys/wait.h",
        "source/src/include/port/win32/netinet/in.h",
        "source/src/include/port/win32/netinet/tcp.h",
        "source/src/include/port/win32/arpa/inet.h",
        "source/src/include/port/win32/netdb.h",
        "source/src/include/port/win32/grp.h",
        "source/src/include/port/win32/dlfcn.h",
        "source/src/include/port/win32/pwd.h",
        "source/src/include/port/win32_msvc/unistd.h",
        "source/src/include/port/win32_msvc/dirent.h",
        "source/src/include/port/win32_msvc/utime.h",
        "source/src/include/port/win32_msvc/sys/time.h",
        "source/src/include/port/win32_msvc/sys/param.h",
        "source/src/include/port/win32_msvc/sys/file.h",
        "source/src/include/postgres_fe.h",
        "source/src/include/common/fe_memutils.h",
        "source/src/include/common/file_perm.h",
        "source/src/include/common/base64.h",
        "source/src/include/common/hmac.h",
        "source/src/include/common/cryptohash.h",
        "source/src/include/common/scram-common.h",
        "source/src/include/common/sha2.h",
        "source/src/common/sha2_int.h",
        "source/src/common/sha1_int.h",
        "source/src/include/common/sha1.h",
        "source/src/include/common/md5.h",
        "source/src/common/md5_int.h",
        "source/src/include/common/ip.h",
        "source/src/include/common/jsonapi.h",
        "source/src/include/common/kwlookup.h",
        "source/src/include/common/link-canary.h",
        "source/src/include/common/logging.h",
        "source/src/include/common/percentrepl.h",
        "source/src/include/common/string.h",
        "source/src/include/common/pg_lzcompress.h",
        "source/src/include/common/pg_prng.h",
        "source/src/include/common/file_utils.h",
        "source/src/include/common/saslprep.h",
        "source/src/include/common/unicode_norm.h",
        "source/src/include/common/unicode_norm_table.h",
        "source/src/include/common/username.h",
        "source/src/include/common/unicode_nonspacing_table.h",
        "source/src/include/common/unicode_east_asian_fw_table.h",
        "source/src/include/common/restricted_token.h",
        "source/src/include/common/openssl.h",
        "source/src/include/mb/pg_wchar.h",
        "source/src/include/utils/ascii.h",
        "source/src/include/lib/sort_template.h",
        "source/src/include/lib/stringinfo.h",
        "source/src/include/libpq/pqcomm.h",
        "source/src/include/libpq/protocol.h",
        "source/src/include/libpq/libpq-fs.h",
        "source/src/include/c.h",
        "source/src/include/port.h",
        "source/src/include/pgtar.h",
        "source/src/include/pg_config_manual.h",
        "source/src/port/strlcat.c",
        "source/src/port/strlcpy.c",
        "source/src/port/snprintf.c",
        "source/src/port/pg_crc32c_sb8.c",
        "source/src/port/bsearch_arg.c",
        "source/src/port/chklocale.c",
        "source/src/port/inet_net_ntop.c",
        "source/src/port/noblock.c",
        "source/src/port/pg_bitutils.c",
        "source/src/port/pg_strong_random.c",
        "source/src/port/pgcheckdir.c",
        "source/src/port/pgmkdirp.c",
        "source/src/port/pgsleep.c",
        "source/src/port/pgstrcasecmp.c",
        "source/src/port/pgstrsignal.c",
        "source/src/port/pqsignal.c",
        "source/src/port/qsort.c",
        "source/src/port/quotes.c",
        "source/src/port/strerror.c",
        "source/src/port/tar.c",
        "source/src/port/explicit_bzero.c",
        "source/src/port/getpeereid.c",
        "source/src/port/user.c",
        "source/src/port/win32common.c",
        "source/src/port/win32dlopen.c",
        "source/src/port/win32env.c",
        "source/src/port/win32error.c",
        "source/src/port/win32fdatasync.c",
        "source/src/port/win32fseek.c",
        "source/src/port/win32getrusage.c",
        "source/src/port/win32gettimeofday.c",
        "source/src/port/win32link.c",
        "source/src/port/win32ntdll.c",
        "source/src/port/win32pread.c",
        "source/src/port/win32pwrite.c",
        "source/src/port/win32security.c",
        "source/src/port/win32setlocale.c",
        "source/src/port/win32stat.c",
        "source/src/port/win32gai_strerror.c",
        "source/src/port/pthread-win32.h",
        "source/src/port/open.c",
        "source/src/port/dirmod.c",
        "source/src/port/inet_aton.c",
        "source/src/common/file_perm.c",
        "source/src/common/encnames.c",
        "source/src/common/base64.c",
        "source/src/common/scram-common.c",
        "source/src/common/ip.c",
        "source/src/common/jsonapi.c",
        "source/src/common/kwlookup.c",
        "source/src/common/link-canary.c",
        "source/src/common/md5_common.c",
        "source/src/common/percentrepl.c",
        "source/src/common/pg_get_line.c",
        "source/src/common/pg_lzcompress.c",
        "source/src/common/pg_prng.c",
        "source/src/common/pgfnames.c",
        "source/src/common/psprintf.c",
        "source/src/common/rmtree.c",
        "source/src/common/saslprep.c",
        "source/src/common/string.c",
        "source/src/common/stringinfo.c",
        "source/src/common/unicode_norm.c",
        "source/src/common/username.c",
        "source/src/common/wait_error.c",
        "source/src/common/wchar.c",
        "source/src/common/fe_memutils.c",
        "source/src/common/restricted_token.c",
        "source/src/common/sprompt.c",
        "source/src/common/logging.c",
        "source/src/common/cryptohash_openssl.c",
        "source/src/common/hmac_openssl.c",
        "source/src/common/protocol_openssl.c",
        "source/src/common/cryptohash.c",
        "source/src/common/hmac.c",
        "source/src/common/md5.c",
        "source/src/common/sha1.c",
        "source/src/common/sha2.c",
        "source/src/common/wchar.c",
        "source/src/interfaces/libpq/fe-auth-scram.c",
        "source/src/interfaces/libpq/fe-auth.c",
        "source/src/interfaces/libpq/fe-cancel.c",
        "source/src/interfaces/libpq/fe-connect.c",
        "source/src/interfaces/libpq/fe-exec.c",
        "source/src/interfaces/libpq/fe-lobj.c",
        "source/src/interfaces/libpq/fe-misc.c",
        "source/src/interfaces/libpq/fe-print.c",
        "source/src/interfaces/libpq/fe-protocol3.c",
        "source/src/interfaces/libpq/fe-secure.c",
        "source/src/interfaces/libpq/fe-trace.c",
        "source/src/interfaces/libpq/legacy-pqsignal.c",
        "source/src/interfaces/libpq/libpq-events.c",
        "source/src/interfaces/libpq/pqexpbuffer.c",
        "source/src/interfaces/libpq/fe-secure-common.c",
        "source/src/interfaces/libpq/fe-secure-openssl.c",
        "source/src/interfaces/libpq/fe-secure.c",
        "source/src/interfaces/libpq/pthread-win32.c",
        "source/src/interfaces/libpq/win32.c",
        "source/src/interfaces/libpq/win32.h",
        "source/src/interfaces/libpq/libpq-fe.h",
        "source/src/interfaces/libpq/fe-auth.h",
        "source/src/interfaces/libpq/fe-secure-common.h",
        "source/src/interfaces/libpq/libpq-int.h",
        "source/src/interfaces/libpq/fe-auth-sasl.h",
        "source/src/interfaces/libpq/pqexpbuffer.h",
        "source/src/interfaces/libpq/libpq-events.h",
]
description = "Bundled version of libpq"
license = "PostgreSQL"
repository = "https://github.com/sgrif/pq-sys"
links = "pq_sys_src"
keywords = ["bindings", "libpq", "pq-sys", "bundled"]
categories = ["database", "external-ffi-bindings"]
readme = "README.md"

[dependencies]
openssl-sys = { version = "0.9.93", optional = true }

[build-dependencies]
cc = "1.0.83"

[features]
default = ["with-openssl"]
with-asan = []
with-openssl = ["dep:openssl-sys"]
